--- a/Assignment02/src/application/Dashboard.fxml
+++ b/Assignment02/src/application/Dashboard.fxml
@@ -9,69 +9,69 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #2d3447;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.DashboardController">
    <children>
-      <Label fx:id="welcomeText" layoutX="116.0" layoutY="118.0" text="Welcome" textFill="WHITE">
+      <Label fx:id="welcomeText" layoutX="138.0" layoutY="119.0" text="Welcome" textFill="WHITE">
          <font>
-            <Font name="System Bold" size="24.0" />
+            <Font name="System Bold Italic" size="24.0" />
          </font>
       </Label>
-      <Button layoutX="625.0" layoutY="54.0" mnemonicParsing="false" onAction="#editProfile" prefHeight="35.0" prefWidth="100.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Edit profile" textFill="WHITE">
+      <Button layoutX="699.0" layoutY="54.0" mnemonicParsing="false" onAction="#editProfile" prefHeight="35.0" prefWidth="100.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Edit profile" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <Button layoutX="120.0" layoutY="185.0" mnemonicParsing="false" onAction="#addPost" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Add post" textFill="WHITE">
+      <Button layoutX="142.0" layoutY="186.0" mnemonicParsing="false" onAction="#addPost" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Add post" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="120.0" layoutY="420.0" mnemonicParsing="false" onAction="#RetrievePost" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Retrieve post" textFill="WHITE">
+      <Button layoutX="142.0" layoutY="421.0" mnemonicParsing="false" onAction="#RetrievePost" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Retrieve post" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="365.0" layoutY="420.0" mnemonicParsing="false" onAction="#RemovePost" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Remove post" textFill="WHITE">
+      <Button layoutX="387.0" layoutY="421.0" mnemonicParsing="false" onAction="#RemovePost" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Remove post" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="370.0" layoutY="185.0" mnemonicParsing="false" onAction="#LikedPosts" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Most liked posts" textFill="WHITE">
+      <Button layoutX="392.0" layoutY="186.0" mnemonicParsing="false" onAction="#LikedPosts" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Most liked posts" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="612.0" layoutY="420.0" mnemonicParsing="false" onAction="#ExportPost" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Export post" textFill="WHITE">
+      <Button layoutX="634.0" layoutY="421.0" mnemonicParsing="false" onAction="#ExportPost" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Export post" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="744.0" layoutY="54.0" mnemonicParsing="false" onAction="#logout" prefHeight="35.0" prefWidth="74.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Log Out" textFill="WHITE">
+      <Button layoutX="818.0" layoutY="54.0" mnemonicParsing="false" onAction="#logout" prefHeight="35.0" prefWidth="74.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Log Out" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <TextField fx:id="postIDField" layoutX="120.0" layoutY="339.0" prefHeight="32.0" prefWidth="217.0" promptText="Post ID" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
+      <TextField fx:id="postIDField" layoutX="142.0" layoutY="340.0" prefHeight="32.0" prefWidth="217.0" promptText="Post ID" style="-fx-background-color: #2D3447; -fx-border-color: white; -fx-text-fill: white;">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <Label layoutX="120.0" layoutY="378.0" text="Enter Post ID to Retrieve, Remove post or Export post" textFill="WHITE" />
+      <Label layoutX="142.0" layoutY="379.0" text="Enter Post ID to Retrieve, Remove post or Export post" textFill="WHITE" />
       <Label fx:id="errorMessage" layoutX="365.0" layoutY="345.0" prefHeight="20.0" prefWidth="311.0" textFill="#ff007f">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Line endX="392.0" layoutX="462.0" layoutY="319.0" startX="-375.0" stroke="WHITE" />
-      <Label fx:id="vip" layoutX="116.0" layoutY="54.0" prefHeight="27.0" prefWidth="74.0" textFill="#ffd608">
+      <Line endX="422.0" layoutX="462.0" layoutY="319.0" startX="-375.0" stroke="WHITE" />
+      <Label fx:id="vip" layoutX="138.0" layoutY="54.0" prefHeight="27.0" prefWidth="74.0" textFill="#ffd608">
          <font>
             <Font name="System Bold Italic" size="24.0" />
          </font>
       </Label>
-      <Button fx:id="upgradeButton" layoutX="523.0" layoutY="54.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="92.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Upgrade" textFill="WHITE">
+      <Button fx:id="upgradeButton" layoutX="597.0" layoutY="54.0" mnemonicParsing="false" onAction="#upgradeProfile" prefHeight="35.0" prefWidth="92.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Upgrade" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <Label fx:id="upgradeLabel" layoutX="329.0" layoutY="62.0" prefHeight="20.0" prefWidth="183.0" text="Upgrade to VIP membership!" textFill="WHITE">
+      <Label fx:id="upgradeLabel" layoutX="403.0" layoutY="62.0" prefHeight="20.0" prefWidth="183.0" text="Upgrade to VIP membership!" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
