--- a/Assignment02/src/application/Dashboard.fxml
+++ b/Assignment02/src/application/Dashboard.fxml
@@ -76,5 +76,10 @@
             <Font size="14.0" />
          </font>
       </Label>
+      <Button layoutX="634.0" layoutY="186.0" mnemonicParsing="false" onAction="#ShareChartController" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2D3447; -fx-border-color: white;" text="Shares Distribution" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
